--- a/extension/package.json
+++ b/extension/package.json
@@ -1,11 +1,16 @@
 {
+	"icon": "icon.png",
 	"name": "prettier-rust",
-	"displayName": "Prettier - Code formatter (Rust)",
 	"publisher": "jinxdash",
-	"repository": "https://github.com/jinxdash/prettier-plugin-rust",
-	"author": "jinxdash <jinxdash.github@gmail.com> (https://github.com/jinxdash)",
+	"displayName": "Prettier - Code formatter (Rust)",
 	"description": "Code formatter using prettier and prettier-plugin-rust",
-	"version": "0.0.1",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/jinxdash/prettier-plugin-rust.git",
+		"directory": "extension"
+	},
+	"author": "jinxdash <jinxdash.github@gmail.com> (https://github.com/jinxdash)",
+	"version": "0.1.0",
 	"engines": {
 		"vscode": "^1.69.0"
 	},
@@ -13,8 +18,10 @@
 		"Formatters"
 	],
 	"scripts": {
-		"bundle": "esbuild src/index.ts --bundle --outfile=index.js --platform=node --external:vscode --external:prettier --external:prettier-plugin-rust  --external:jinx-rust --legal-comments=inline",
-		"watch": "pnpm run bundle --watch"
+		"bundle": "esbuild src/index.ts --bundle --outfile=index.js --format=cjs --platform=node --external:vscode",
+		"watch": "pnpm run bundle --watch",
+		"package": "pnpm run bundle && pnpm vsce package --no-dependencies",
+		"publish": "pnpm vsce publish --no-dependencies"
 	},
 	"contributes": {
 		"languages": [
