--- a/extension/package.json
+++ b/extension/package.json
@@ -10,7 +10,7 @@
 		"directory": "extension"
 	},
 	"author": "jinxdash <jinxdash.github@gmail.com> (https://github.com/jinxdash)",
-	"version": "0.1.4",
+	"version": "0.1.5",
 	"engines": {
 		"vscode": "^1.69.0"
 	},
@@ -51,7 +51,7 @@
 	"dependencies": {
 		"prettier": "^2.7.1",
 		"jinx-rust": "^0.1.4",
-		"prettier-plugin-rust": "file:.."
+		"prettier-plugin-rust": "file:../"
 	},
 	"main": "index.js",
 	"activationEvents": [
