--- a/extension/package.json
+++ b/extension/package.json
@@ -50,7 +50,7 @@
 	},
 	"dependencies": {
 		"prettier": "^2.7.1",
-		"jinx-rust": "^0.1.4",
+		"jinx-rust": "0.1.5",
 		"prettier-plugin-rust": "file:../"
 	},
 	"main": "index.js",
