--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
 		"typescript": "^4.7.4"
 	},
 	"dependencies": {
-		"jinx-rust": "^0.1.4",
+		"jinx-rust": "0.1.5",
 		"prettier": "^2.7.1"
 	},
 	"prettier": {
