feat: '@' in macro rules and cfg_if!

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -26,5 +26,10 @@
 		// Project
 		"composite": true,
 		"isolatedModules": true
+	},
+	"ts-node": {
+		"esm": true,
+		"swc": true,
+		"experimentalSpecifierResolution": "node"
 	}
 }
