--- a/extension/package.json
+++ b/extension/package.json
@@ -45,13 +45,12 @@
 		"@types/node": "^18.0.6",
 		"@types/vscode": "^1.69.0",
 		"esbuild": "^0.14.49",
-		"typescript": "^4.7.4",
-		"tsup": "^6.1.3"
+		"typescript": "^4.7.4"
 	},
 	"dependencies": {
 		"prettier": "^2.7.1",
 		"jinx-rust": "0.1.6",
-		"prettier-plugin-rust": "file:../"
+		"prettier-plugin-rust": "workspace:prettier-plugin-rust"
 	},
 	"main": "index.js",
 	"activationEvents": [
