--- a/package.json
+++ b/package.json
@@ -32,19 +32,19 @@
 		"LICENSE"
 	],
 	"scripts": {
-		"e": "node --loader ts-node/esm/transpile-only --experimental-specifier-resolution=node --no-warnings",
-		"build": "pnpm run e -- ./scripts/build.ts && pnpm run test-build",
-		"test-build": "pnpm run e -- ./tests/test.build.ts",
-		"test-print-samples": "pnpm run e -- ./tests/print.ts",
-		"dev-repl": "pnpm run e -- ./scripts/dev.repl.ts",
-		"dev-format-local": "pnpm run e -- ./scripts/dev.format.ts"
+		"build": "ts-node ./scripts/build.ts && ts-node ./tests/test.build.ts",
+		"test-build": "ts-node ./tests/test.build.ts",
+		"test-print-samples": "ts-node ./tests/print.ts",
+		"dev-repl": "ts-node ./scripts/dev.repl.ts",
+		"dev-format-local": "ts-node ./scripts/dev.format.ts"
 	},
 	"devDependencies": {
+		"@swc/core": "^1.2.248",
 		"@types/node": "^18.0.6",
-		"@types/prettier": "^2.6.3",
+		"@types/prettier": "^2.7.0",
 		"ts-node": "^10.9.1",
-		"tsup": "^6.1.3",
-		"typescript": "^4.7.4"
+		"tsup": "^6.2.3",
+		"typescript": "^4.8.2"
 	},
 	"dependencies": {
 		"jinx-rust": "0.1.6",
